# a2a-hello-world

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  a2a.sh  a2acard.sh  a2atest.sh  api_server.sh  cli.sh  init.sh  local.sh  poly-node.sh  polyhello.sh  polymaster.sh  polynode.sh  polyrand.sh  polyweb.sh  pyproject.toml  requirements.txt  run.sh  set_env.sh  web.sh  webvm.sh
.github/workflows/: python-agent.yml  python-client-test.yml  rust.yml
a2a-client-rust/: Cargo.toml  GEMINI.md  Makefile
a2a-client-rust/src/: main.rs
a2a-client-test/: test_client.py
poly-go/: Makefile  README.md  go.mod  go.sum  main.go  main_test.go
poly-node/: .eslintrc.js  Makefile  package-lock.json  package.json  server.js  server.ts  tsconfig.json
poly-python/agents/poly_master/: agent.py
poly-rust/: Cargo.toml
poly-rust/src/: main.rs
poly-rust/src/common/: mod.rs  simple_agent_handler.rs
poly-src/agents/poly_master_agent/: agent.py
poly-src/agents/poly_rand/: agent.py
src/agents/: agent_to_a2a.py
src/agents/a2a_hello_world/: agent.py  requirements.txt
src/agents/a2a_hello_world/tests/: test_agent.py
