[package]
name = "a2a-client-rust"
version = "0.1.0"
edition = "2024"
description = "Minimal A2A client call"
license = "MIT"
repository = "https://github.com/xbill9/a2a-hello-world"


[dependencies]
serde = { version = "^1.0.219", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
log = "^0.4.22"
pretty_env_logger = "^0.5.0"
thiserror = "^1.0.61"
# For HTTP client
a2a-rs = { version = "0.1.0", features = ["http-client"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
