[package]
name = "a2a-server-rust"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust A2A server agent"
license = "MIT"
repository = "https://github.com/xbill9/a2a-hello-world"


[dependencies]
serde = { version = "^1.0.219", features = ["derive"] }
google-cloud-pubsub = "^0.30.0"
tokio = { version = "^1.37.0", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.86"
log = "0.4.21"
pretty_env_logger = "0.5.0"
env_logger = "0.11.3"
a2a-rs = { version = "0.1.0", features = ["full"] }
async-trait = "0.1.80"
futures = "0.3.31"
uuid = "1.18.1"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
